--- a/Anitta.html
+++ b/Anitta.html
@@ -23,7 +23,7 @@
             <br>
             A Developer.
          </h1>
-         <p>CSS/JAVA/C++</p>
+         <p>CSS/JAVA/C++/Python</p>
          <a href="#about">See my work</a><br><br>      
         </div>
      </div>
